screencast: Make sure we send a message reply when restoring

We are returning directly in this case not manually via delayed reply.
When showing a dialog the delayReply function will set it correctly.
BUG:504384
FIXED-IN:6.4


(cherry picked from commit 5c9efae8b54127e6e7a8571116496ae59486e112)

Co-authored-by: David Redondo <kde@david-redondo.de>